# Terraria-clone

./: .gitignore  CMakeLists.txt  Makefile  README.md  githint.txt  imgui.ini  log.txt
src/: assetmanager.cpp  camera.cpp  debug.cpp  main.cpp  player.cpp  quad.cpp  shader.cpp  stb_perlin.cpp  texture.cpp  world.cpp
src/headers/: assetmanager.h  camera.h  debug.h  player.h  quad.h  shader.h  texture.h  world.h
src/shaders/: fragment.glsl  vertex.glsl
